--- a/index1.html
+++ b/index1.html
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <header>
+        <!-- <header>
             <nav class="navbar navbar-dark bg-dark">
                 <div class="container-fluid">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -26,10 +26,10 @@
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link active" aria-current="page" href="#">Projects</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Link</a>
+                                <a class="nav-link active" href="#">Link</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link disabled" aria-disabled="true">Disabled</a>
@@ -38,7 +38,7 @@
                     </div>
                 </div>
             </nav>
-        </header>
+        </header> -->
         <div class="mobile-items-view">
             <img src="exported/assets/images/foto-571x574.jpeg" alt="">
             <p>Junior Backend Developer</p>
