--- a/index1.html
+++ b/index1.html
@@ -62,7 +62,6 @@
         <div id="particles-js"></div>
 
         <div class="principal">
-
             <div class="buttons buttons-left">
 
                 <button class="btn-about-me ui-btn"><span>AboutMe</span></button>
@@ -70,11 +69,11 @@
                 <button class="btn-superpowers ui-btn"><span>Projects</span></button>
             </div>
 
-            <div class="container">
+            <div class="container-foto">
                 <div class="box">
                     <img src="exported/assets/images/me.jpg" alt="">
                     <div id="userTitle">
-                        <span class="title">katheprc</span>
+                        <span class="title">junior backend dev</span>
                     </div>
                 </div>
             </div>
